# uptk

./: .gitignore  CMakeLists.txt  COMPILATION_FIXES.md  FIXES_SUMMARY.md  README.md  env.sh  rebuild.sh  问题.md
example/: test.py
example/context_01/: Makefile  context_01.cpp
example/demo/: Makefile  demo.cpp
example/device_01/: Makefile  device_01.cpp
example/error_01/: Makefile  error_01.cpp
example/event_01/: Makefile  event_01.cpp
example/graph_01/: Makefile  graph_01.cpp
example/launch_01/: Makefile  launch_01.cpp
example/launch_02/: Makefile  launch_02.cpp
example/memory_02/: Makefile  README.md  consumer.cpp  hip_test_report.txt  hip_test_results.json  producer.cpp
example/memory_03/: Makefile  memory_03.cpp
example/module_01/: Makefile  kernel.code  kernel.cpp  module_01.cpp
example/module_02/: Makefile  module_02.cpp
example/module_03/: Makefile  module_03.cpp
example/stream_01/: Makefile  stream_01.cpp
example/stream_02/: Makefile  stream_02.cpp
example_port/cuda_port_demo/: README.md
example_port/cuda_port_demo/MyDemo_CUDA/: CMakeLists.txt  MyDemo.cu  MyDemo1.cu
example_port/cuda_port_demo/MyDemo_UPTK/: CMakeLists.txt  MyDemo.cu
example_port/hip_port_demo/: README.md
example_port/hip_port_demo/demo_HIP/: CMakeLists.txt  demo.hip
example_port/hip_port_demo/demo_UPTK/: CMakeLists.txt  demo.hip
include/: UPTK.h  UPTK.hbak  UPTK.hbak1  UPTK_blas.h  UPTK_driver_types.h  UPTK_fft.h  UPTK_nccl.h  UPTK_rtc.h  UPTK_runtime.h  UPTK_runtime_api.h  UPTK_sparse.h  UPTK_sparse_v2.h  UPTKblas.h  UPTKfft.h
output/include/: UPTK.h  UPTK_blasXt.h  UPTK_driver_types.h  UPTK_fft.h  UPTK_fftXt.h  UPTK_library_types.h  UPTK_libxt.h  UPTK_nccl.h  UPTK_rand.h  UPTK_runtime_api.h  UPTK_sparse.h  UPTK_sparseLt.h
output/lib/: a.txt  libUPTKblas.so.1.0.0.0  libUPTKdrt.so.1  libUPTKnccl.so.1  libUPTKrand.so.1  libUPTKrt.so.1  libUPTKsparse.so.1.0.0.0
packaging/: libUPTKblas.so.def  libUPTKdrt.so.def  libUPTKfft.so.def  libUPTKnccl.so.def  libUPTKrand.so.def  libUPTKrt.so.def  libUPTKruntime.so.def  libUPTKsparse.so.def  libcuda.so.def
src/: CMakeLists.txt  runtime.hpp  runtime_fun_convert.cpp  runtime_type_convert.cpp
src/UPTKblas/: CMakeLists.txt  blas.hpp  blas_fun_convert.cpp
src/UPTKfft/: CMakeLists.txt  fft_fun_convert.cpp  fft_type_convert.cpp
src/UPTKrand/: CMakeLists.txt  rand.hpp  rand_fun_convert.cpp
src/UPTKsparse/: CMakeLists.txt  sparse.hpp  sparse_fun_convert.cpp
src/blas/: CMakeLists.txt  blas.hpp  blasXt_fun_convert.cpp  blas_fun_convert.cpp  blas_type_convert.cpp
src/driver/: CMakeLists.txt  driver.hpp  driver.hppbak  driver_fun_convert.cpp  driver_fun_convert.cppbak1  driver_type_convert.cpp  driver_type_convert.cppbak  driver_type_convert.cppbak1
src/fft/: CMakeLists.txt  fft.hpp  fftXt_fun_convert.cpp  fft_fun_convert.cpp  fft_type_convert.cpp
src/nccl/: CMakeLists.txt  nccl.hpp  nccl_fun_convert.cpp  nccl_type_convert.cpp
src/rand/: CMakeLists.txt  rand.hpp  rand_fun_convert.cpp  rand_type_convert.cpp
src/rtc/: CMakeLists.txt  rtc.hpp  rtc_fun_convert.cpp  rtc_type_convert.cpp
src/runtime/: CMakeLists.txt  runtime.hpp  runtime_fun_convert.cpp  runtime_type_convert.cpp
src/sparse/: CMakeLists.txt  sparse.hpp  sparse_fun_convert.cpp  sparse_type_convert.cpp
test/: CMakeLists.txt  context.cpp  device.cpp  event.cpp  graph.cpp  launch.cpp  memory.cpp  module.cpp  stream.cpp  test.py
tests/: Attribute.cpp  CMakeLists.txt  Ctx.cpp  ErrorDeal.cpp  Graph.cpp  KernelLaunch.cpp  device.cpp  event.cpp  malloc.cpp  module.cpp  run_all_tests.sh  stream.cpp  test_blas.cpp  test_common.h  test_fft.cpp  test_nccl.cpp  test_runtime.cpp
tools/cuda_to_uptk/: README.md  api_map.json  convert_lib.js  converter.py  cuda_to_uptk.py  generate_map.js  generate_map.py  run_demo_test.js  test_converter.js  test_converter.py
tools/cuda_to_uptk/_test_output/: MyDemo.cu
