cmake_minimum_required(VERSION 3.10)
enable_testing()

set_source_files_properties(stream.cpp device.cpp Attribute.cpp Ctx.cpp ErrorDeal.cpp event.cpp Graph.cpp KernelLaunch.cpp malloc.cpp module.cpp PROPERTIES LANGUAGE CXX)

add_executable(stream stream.cpp)
add_executable(device device.cpp)
add_executable(Attribute Attribute.cpp)
add_executable(Ctx Ctx.cpp)
add_executable(ErrorDeal ErrorDeal.cpp)
add_executable(event event.cpp)
add_executable(Graph Graph.cpp)
add_executable(KernelLaunch KernelLaunch.cpp)
add_executable(malloc malloc.cpp)
add_executable(module module.cpp)

target_link_libraries(stream pthread UPTKrt)
target_link_libraries(device pthread UPTKrt)
target_link_libraries(Attribute pthread UPTKrt)
target_link_libraries(Ctx pthread UPTKrt)
target_link_libraries(ErrorDeal pthread UPTKrt)
target_link_libraries(event pthread UPTKrt)
target_link_libraries(Graph pthread UPTKrt)
target_link_libraries(KernelLaunch pthread UPTKrt)
target_link_libraries(malloc pthread UPTKrt)
target_link_libraries(module pthread UPTKrt)

add_test(NAME UPTKStreamCreate COMMAND stream)
add_test(NAME UPTKDeviceCreate COMMAND device)
add_test(NAME UPTKAttributeCreate COMMAND Attribute)
add_test(NAME UPTKCtxCreate COMMAND Ctx)
add_test(NAME UPTKErrorDealCreate COMMAND ErrorDeal)
add_test(NAME UPTKeventCreate COMMAND event)
add_test(NAME UPTKGraphCreate COMMAND Graph)
add_test(NAME UPTKKernelLaunchCreate COMMAND KernelLaunch)
add_test(NAME UPTKmallocCreate COMMAND malloc)
add_test(NAME UPTKmoduleCreate COMMAND module)
